# wiiload-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: args.rs  file.rs  main.rs  net.rs
